--- a/FeebasBot/FeebasBot/Properties/Resources.resx
+++ b/FeebasBot/FeebasBot/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="alarm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\alarm.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="por" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\por.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="vara" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vara.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,7 +142,7 @@
   <data name="agua" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\agua.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="por" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\por.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="padrao" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\padrao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
