--- a/FeebasBot/FeebasBot/Properties/Resources.resx
+++ b/FeebasBot/FeebasBot/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="padrao" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\padrao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="peixe1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\peixe1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,7 +145,7 @@
   <data name="agua" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\agua.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="padrao" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\padrao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Discord-Logo-Color" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Discord-Logo-Color;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
