--- a/FeebasBot/FeebasBot/Telas/CaveBot.resx
+++ b/FeebasBot/FeebasBot/Telas/CaveBot.resx
@@ -593,4 +593,7 @@
         z2nVJR2BAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
